--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@ function onYouTubeIframeAPIReady() {
     width: '640',
     videoId: 'JTEFKFiXSx4',
     events: {
-      'onReady': onPlayerReady,
-      'onStateChange': onPlayerStateChange
+      onReady: onPlayerReady,
+      onStateChange: onPlayerStateChange,
+      playerVars: {
+        autohide: 0,
+        controls: 1,
+        modestbranding: 1,
+      },
     }
   });
 }
@@ -34,10 +39,10 @@ function onPlayerReady(event) {
 
 var done = false;
 function onPlayerStateChange(event) {
-  if (event.data == YT.PlayerState.PLAYING && !done) {
-    setTimeout(stopVideo, 6000);
-    done = true;
-  }
+  // if (event.data == YT.PlayerState.PLAYING && !done) {
+  //   setTimeout(stopVideo, 6000);
+  //   done = true;
+  // }
 }
 function stopVideo() {
   player.stopVideo();
