--- a/index.html
+++ b/index.html
@@ -3,10 +3,68 @@
 <head>
   <meta charset="UTF-8">
   <title>The Earth The Movie</title>
+
+  <style>
+body {
+  margin: 0;
+}
+
+.face {
+  position: absolute;
+
+  left: 0;
+  top: 0;
+
+  width: 640px;
+  height: 350px;
+
+  background-color: #000;
+}
+
+.earth {
+  position: absolute;
+
+  width: 300px;
+  height: 300px;
+
+  left: 50%;
+  top: 50%;
+
+  margin-left: -150px;
+  margin-top: -150px;
+
+  border-radius: 300px;
+
+  background-color: blue;
+}
+
+.time {
+  position: absolute;
+
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+
+  left: 0;
+  top: 50%;
+
+  margin-top: -15px;
+
+  text-align: center;
+
+  color: white;
+}
+  </style>
 </head>
 <body>
 
-<div id="player"></div>
+<div class="wrapper">
+  <div id="player"></div>
+  <div class="face">
+    <div class="earth"></div>
+    <div class="time"><time></time></div>
+  </div>
+</div>
 
 <script>
 var tag = document.createElement('script');
@@ -34,6 +92,7 @@ function onYouTubeIframeAPIReady() {
 }
 
 function onPlayerReady(event) {
+  event.target.setVolume(0)
   event.target.playVideo();
 }
 
@@ -47,6 +106,24 @@ function onPlayerStateChange(event) {
 function stopVideo() {
   player.stopVideo();
 }
+
+var recentDate = new Date(2016, 3, 30, 13 - 9, 4, 33);
+var epochDate = new Date(-62135661600000); // 西暦1年1月1日0時0分0秒
+
+function updateTime() {
+  if(player && player.getCurrentTime && player.getDuration()) {
+    var cur = player.getCurrentTime();
+    var dur = player.getDuration();
+    var ratio = cur / dur;
+
+    var curDate = new Date(epochDate.valueOf() + (recentDate.valueOf() - epochDate.valueOf()) * ratio);
+
+    var timeElm = document.querySelector('.time time');
+    timeElm.innerText = curDate.toISOString();
+  }
+  requestAnimationFrame(updateTime);
+}
+requestAnimationFrame(updateTime);
 </script>
 
   
