--- a/index.html
+++ b/index.html
@@ -3,76 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>The Earth The Movie</title>
-
-  <style>
-body {
-  margin: 0;
-}
-
-.face {
-  position: absolute;
-
-  left: 0;
-  top: 0;
-
-  width: 640px;
-  height: 350px;
-
-  background-color: #000;
-}
-
-.earth {
-  position: absolute;
-
-  width: 300px;
-  height: 300px;
-
-  left: 50%;
-  top: 50%;
-
-  margin-left: -150px;
-  margin-top: -150px;
-
-  border-radius: 300px;
-
-  background-color: blue;
-}
-
-.face .time {
-  position: absolute;
-
-  width: 100%;
-  height: 30px;
-  line-height: 30px;
-
-  left: 0;
-  top: 50%;
-
-  margin-top: -15px;
-
-  text-align: center;
-
-  color: white;
-}
-
-.player {
-  position: absolute;
-
-  left: 0;
-  top: 360px;
-
-  width: 640px;
-  height: 30px;
-}
-
-.player .time {
-  display: inline-block;
-  width: 260px;
-  font-size: 9px;
-
-  text-align: center;
-}
-  </style>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -88,41 +19,8 @@ body {
   </div>
 </div>
 
-<script src="jquery.js"></script>
-<script>
-var recentDate = new Date(2016, 3, 30, 13 - 9, 4, 33);
-var epochDate = new Date(-62135596800000); // 西暦1年1月1日0時0分0秒
-var curDate = epochDate;
-var $slider = $('.slider');
-var $time = $('.face .time time');
-var $timeCur = $('.player .time-cur');
-var $timeTotal = $('.player .time-total');
-var ratio;
-
-function formatDate(date) {
-  var ret = `${date.getUTCFullYear()}年${date.getUTCMonth() + 1}月${date.getUTCDate()}日 ${date.getUTCHours()}:${date.getUTCMinutes()}:${date.getUTCSeconds()}`;
-  return ret;
-}
-
-function updateTime() {
-  ratio = $slider.val();
-
-  $time.text(formatDate(curDate));
-  $timeCur.text(formatDate(curDate));
-  requestAnimationFrame(updateTime);
-}
-requestAnimationFrame(updateTime);
-
-$timeTotal.text(formatDate(recentDate));
-
-$slider.on('change', function() {
-  curDate = new Date(epochDate.valueOf() + (recentDate.valueOf() - epochDate.valueOf()) * ratio);
-});
-
-setInterval(function() {
-  curDate = new Date(curDate.valueOf() + 1000);
-}, 1000);
-</script>
+<script src="js/lib/jquery.js"></script>
+<script src="js/main.js"></script>
 
   
 </body>
