--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="controller">
     <button class="btn-gotohead">Go to head</button>
     <button class="btn-play">Play / Pause</button>
-    <button class="btn-sound">Sound on / off</button>
+    <button disabled class="btn-sound">Sound on / off</button>
     <span class="time">
       <time class="time-cur"></time>
       /
@@ -23,7 +23,7 @@
     </span>
     <input type="range" min="0" max="1" step="0.00001" value="0" class="slider">
 
-    <button class="btn-setting">Setting</button>
+    <button disabled class="btn-setting">Setting</button>
   </div>
 </div>
 
