implement Player class

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </div>
 
 <script src="js/lib/jquery.js"></script>
+<script src="js/Player.js"></script>
 <script src="js/main.js"></script>
-
   
 </body>
 </html>
