--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>page</title>
+    <title>The Earth The Movie</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div class="wrapper">
-      <header>
-        <h1 data-heading-level="1">Page</h1>
-      </header>
       <main>
-        <p>Thanks, world!</p>
+        <div class="face">
+          <div class="earth"></div>
+          <div class="time">
+            <time></time>
+          </div>
+        </div>
+        <div class="controller">
+          <button class="btn-gotohead">Go to head</button>
+          <button class="btn-play">Play / Pause</button>
+          <button disabled="" class="btn-sound">Sound on / off</button><span class="time">
+            <time class="time-cur"></time>      /
+            <time class="time-total"></time></span>
+          <input type="range" min="0" max="1" step="0.00001" value="0" class="slider">
+          <button disabled="" class="btn-setting">Setting</button>
+        </div>
       </main>
     </div>
     <script src="js/lib/jquery.min.js"></script>
