--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </div>
     <script src="js/lib/jquery.min.js"></script>
     <script src="js/lib/lodash.min.js"></script>
+    <script src="js/lib/three.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
