migrate earth from three.js demo

--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
     <div class="wrapper">
       <main>
         <div class="face">
-          <div class="earth"></div>
-          <div class="time">
-            <time></time>
-          </div>
+          <div id="container" class="movie"></div>
         </div>
         <div class="controller">
           <button class="btn-gotohead">Go to head</button>
@@ -28,6 +25,9 @@
     <script src="js/lib/jquery.min.js"></script>
     <script src="js/lib/lodash.min.js"></script>
     <script src="js/lib/three.min.js"></script>
+    <script src="js/lib/CanvasRenderer.js"></script>
+    <script src="js/lib/Projector.js"></script>
+    <script src="js/lib/stats.min.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
