--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <div class="wrapper">
       <main>
         <div class="face">
-          <div id="container" class="movie"></div>
+          <div id="container" class="three"></div>
+          <div class="movie">
+            <canvas></canvas>
+          </div>
         </div>
         <div class="controller">
           <button class="btn-gotohead">Go to head</button>
