--- a/bg-site-preview/com__youtube.html
+++ b/bg-site-preview/com__youtube.html
@@ -11,9 +11,8 @@
         <div class="bg-site"></div>
       </main>
     </div>
-    <!-- from https://www.youtube.com/watch?v=v64F7YaY27U-->
     <script type="text/template" class="template--com__youtube">
-      <div class="the-earth-the-movie__site-body">
+      <div class="the-earth-the-movie__site-body com__youtube">
         <div dir="ltr" id="body" class="  ltr  webkit webkit-537  exp-responsive exp-scrollable-guide   site-center-aligned site-as-giant-card appbar-hidden    visibility-logging-enabled   not-nirvana-dogfood  not-yt-legacy-css      flex-width-enabled      flex-width-enabled-snap  page-loaded" data-spf-name="watch">
         
         <div id="early-body"></div>
