--- a/bg-site-preview/jp__co__yahoo__headlines.html
+++ b/bg-site-preview/jp__co__yahoo__headlines.html
@@ -11,9 +11,8 @@
         <div class="bg-site"></div>
       </main>
     </div>
-    <!-- http://headlines.yahoo.co.jp/hl?a=20160413-00010006-afpbbnewsv-int-->
     <script type="text/template" class="template--jp__co__yahoo__headlines">
-      <div class="the-earth-the-movie__site-body">
+      <div class="the-earth-the-movie__site-body jp__co__yahoo__headlines">
         <div class="yj950-2">
         
         <div id="wrapper">
