implement site bg

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <div class="wrapper">
       <div class="three"></div>
       <main class="main">
+        <div class="bg"></div>
         <div class="bg-site"></div>
         <div class="cover"></div>
         <div class="media">
