implement browser frame (not fitting)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       <div class="three"></div>
       <main class="main">
         <div class="bg"></div>
+        <div class="browser-frame">
+          <div class="right"></div>
+          <div class="left"></div>
+          <div class="title"></div>
+        </div>
         <div class="bg-site"></div>
         <div class="cover"></div>
         <div class="media">
