--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <button disabled="" class="btn-setting">Setting</button>
           </div>
         </div>
+        <div class="overlay"></div>
       </main>
     </div>
     <script src="js/lib/jquery.min.js"></script>
