--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <div class="left"></div>
           <div class="title"></div>
         </div>
+        <div class="frame-open"></div>
         <div class="bg-site"></div>
         <div class="cover"></div>
         <div class="media">
