--- a/index.html
+++ b/index.html
@@ -25,14 +25,9 @@
               <canvas></canvas>
             </div>
           </div>
-          <div class="controller">
-            <button class="btn-gotohead">Go to head</button>
-            <button class="btn-play">Play / Pause</button>
-            <button disabled="" class="btn-sound">Sound on / off</button><span class="time">
+          <div class="controller"><span class="time">
               <time class="time-cur"></time>/
               <time class="time-total"></time></span>
-            <input type="range" min="0" max="1" step="0.00001" value="0" class="slider">
-            <button disabled="" class="btn-setting">Setting</button>
           </div>
         </div>
         <div class="overlay"></div>
