--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
               <canvas></canvas>
             </div>
           </div>
-          <div class="controller"><span class="time">
-              <time class="time-cur"></time>/
-              <time class="time-total"></time></span>
+          <div class="controller">
+            <div class="time">
+              <time class="time-cur"></time> /
+              <time class="time-total"></time>
+            </div>
+            <div class="slider">
+              <div class="slider-cur"></div>
+            </div>
           </div>
         </div>
         <div class="overlay"></div>
